# minecppaft-server-forge-1.7.10

./: .gitignore  AUTOPILOT_PROMPT.md  CMakeLists.txt
include/ai/: EntityAI.h  EntityAITasks.h  PathFinder.h
include/biome/: BiomeRegistry.h
include/block/: Block.h
include/command/: CommandHandler.h  CommandSystem.h
include/crafting/: Crafting.h
include/damage/: DamageSource.h
include/effects/: SoundEffects.h
include/enchantment/: Enchantment.h  EnchantmentHelper.h
include/entity/: DataWatcher.h  Entity.h  EntityArrow.h  EntityAttributes.h  EntityItem.h  EntityList.h  EntityLiving.h  EntityLivingBase.h  EntityMetadata.h  EntityMinecart.h  EntityMobBase.h  EntityPlayerMP.h  EntityTracker.h  EntityVehicle.h  InventoryPlayer.h  MobAI.h  MobEntity.h  MobSpawning.h  Player.h  PlayerCapabilities.h  Projectile.h  SpawnPlayer.h
include/forge/: JNIBridge.h
include/inventory/: Container.h  Inventory.h  Item.h  ItemStack.h
include/item/: Item.h
include/material/: Material.h
include/mechanics/: AchievementManager.h  BedInteraction.h  BlockTickHandler.h  CombatTracker.h  CommandSystem.h  ContainerManager.h  CraftingManager.h  EnchantmentRegistry.h  Experience.h  Explosion.h  FishingManager.h  FoodStats.h  FurnaceManager.h  GameMechanics.h  PistonHandler.h  PotionEffect.h  Redstone.h  RedstoneEngine.h  Scoreboard.h  VillagerTrades.h  WindowInteraction.h
reference-java/: a.java  aa.java  aaa.java  aab.java  aac.java  aad.java  aae.java  aaf.java  aag.java  aah.java  aai.java  aaj.java  aak.java  aal.java  aam.java  aan.java  aao.java  aap.java  aaq.java  aas.java  aat.java  aau.java  aav.java  aaw.java  aax.java  aay.java  aaz.java  ab.java  aba.java  abb.java  abc.java  abd.java  abe.java  abf.java  abg.java  abh.java  abi.java  abj.java  abk.java  abl.java  (+1240 more)
src/: main.cpp
(+1032 files in other folders)
